# jasmin-language-server

./: .gitmodules  LICENSE  README.md  dune  dune-project  flake.nix  jasmin-language-server.opam
.github/workflows/: ci.yml
controller/: documentManager.ml  documentManager.mli  dune  jasminlsp.ml  lspManager.ml  lspManager.mli  projectFile.ml  workspace.ml  workspace.mli
language/: dune  references.ml  references.mli  semanticTokens.ml  semanticTokens.mli  typing.ml  typing.mli
lsp/: dune  lspData.ml  pathMap.ml  uriMap.ml
parsing/: dune  lexer.ml  lexer.mli  parse.ml  parse.mli  syntax.ml  syntax.mli
tests/: diagnostics.ml  dune
